# pybind_onnx_gpu

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  readme.txt
include/: goldwire_evaluator.h  goldwire_status.h
include/.ipynb_checkpoints/: model_wrapper-checkpoint.h
python/: model.py  onnx_model.py
python/.ipynb_checkpoints/: onnx_model-checkpoint.py
src/: goldwire_evaluator.cpp  main.cpp  model_wrapper.cpp
src/.ipynb_checkpoints/: main-checkpoint.cpp
